ops/loadbalancer/traefik/traefik-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      containers:
        - name: traefik
          image: traefik:v2.4
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1000Mi
              cpu: 1000m
            requests:
              memory: 400Mi
              cpu: 400m
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP      
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2  
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          args:
            - --ping=true
            - --log=true
            - --log.level=DEBUG
            - --accesslog
            - --api.dashboard=false
            - --api.insecure=false
            - --entrypoints.web.Address=:80
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd
            # When using the Traefik Kubernetes CRD Provider, unfortunately Cert-Manager cannot yet interface directly with the CRDs.
            # A workaround is to enable the Kubernetes Ingress provider to allow Cert-Manager to create ingress objects to complete
            # the challenges
            - --providers.kubernetesingress=true # need to enable it when using cert-manager
            - --providers.kubernetesingress.ingressclass=traefik
            - --entryPoints.web.http.redirections.entryPoint.to=websecure
            - --entryPoints.web.http.redirections.entryPoint.scheme=https
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
          securityContext:
            capabilities:
              drop:
              - ALL
              add:
              - NET_BIND_SERVICE
