ops/loadbalancer/traefik/jitsi-ingressroute_http.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: jitsi
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`update_this`)
    kind: Rule
    services:
    - name: web
      port: 80
    #certResolver: myresolver
---
